--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
           <artifactId>aws-java-sdk-s3</artifactId>
           <version>1.12.129</version>
       </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-spring-web</artifactId>
+      <version>2.9.2</version>
+    </dependency>
   </dependencies>
 
   <build>
